--- a/public/index.html
+++ b/public/index.html
@@ -90,11 +90,11 @@ lying internet</textarea>
 
                     <div class="form-group">
                       <label for="prefixes">Prefixes</label>
-                      <textarea type="text" title="These values are added before words to prompt the search suggestions" class="form-control" name="prefixes" id="prefixes"  >،آ،ب،پ،ت،ث،ج،چ،ح،خ،د،ذ،ر،ز،س،ش،ص،ض،ط،ظ،ع،غ،ف،ق،ک،گ،ل،م،ن،و،ه،ی،مدل،خرید،قیمت،عکس،تصویر،سفارش،مد،جدید</textarea>
+                      <textarea type="text" title="These values are added before words to prompt the search suggestions" class="form-control" name="prefixes" id="prefixes"  ></textarea>
                     </div>
                     <div class="form-group">
                       <label for="suffixes">Suffixes:</label>
-                      <textarea type="text" rows="2" title="These values are added after words to prompt the search suggestions" class="form-control" id="suffixes">،آ،ب،پ،ت،ث،ج،چ،ح،خ،د،ذ،ر،ز،س،ش،ص،ض،ط،ظ،ع،غ،ف،ق،ک،گ،ل،م،ن،و،ه،ی،مدل،خرید،قیمت،عکس،تصویر،سفارش،مد،جدید</textarea>
+                      <textarea type="text" rows="2" title="These values are added after words to prompt the search suggestions" class="form-control" id="suffixes"></textarea>
                     </div>
 
                     <div class="form-group" style="display: none">
